k8s/sock-shop/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  namespace: sock-shop
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sockshop.paulskay.me
    secretName: sock-shop-tls
  rules:
  - host: "sockshop.paulskay.me"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: front-end
              port:
                number: 80
